# ret

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CNAME  Dockerfile  Makefile  README.md  cs_cmd  emscripten.cmake  examples.js  examples.py  index.html  installation.html  ks_cmd  landing.html  lib.js  light-theme.css  mingw.cmake  pphtml.py  ret.js  robots.txt  selfhost.html  serve.py  sitemap.xml  style.css  tool.py  ui.js  web.js
.github/workflows/: deploy.yml
app/: Makefile  buffers.c  compile_commands.json  libui.c  parser.c  re.c  re.h
arm32/: examples.js  highlight.js  index.html  ret.js  style.css  web.js
arm32/lib/: codejar.js
arm64/: examples.js  index.html  landing.html  lib.js  style.css  web.js  x86asm.js
arm64/lib/: highlight.min.js
bitbash/: README.md  bitbash.js  examples.js  index.html  lang.js  style.css
bitbash/regs/: cpacr_el1.reg  cr0.reg  cr4.reg  esr_el1.reg  mair_el1.reg  sctlr_el3.reg  spsr_el3.reg  tcr_el1.reg  tcr_el2.reg
examples/: arm32-conditions.S  arm32-functions.S  arm32-functions2.S  arm32-hello.S  arm32-jumps.S  arm32-jumps.s  arm32-macros.S  arm32-regs.S  arm32-stack.S  arm64-el.S  arm64-functions.S  arm64-hello-pic.S  arm64-hello.S  arm64-mandelbrot.S  arm64-psci.S  arm64-registers.S  arm64-simd.S  arm64-stack.S  in.s  ppc32-hello.s  rv-func.S  rv-hello.S  rv-hello2.S  rv-regs.S  rv-sierpinski.S  rv-test.S  rv1.S  rv64-hello.s  rv64-registers.S  rv64-regs.s  rv64-regs2.s  x86-functions.asm  x86-hello-gnu.asm  x86-hello-nasm.asm  x86-hello.asm  x86-regs.asm  x86-sierpinski.asm  x86_hello.asm
js/: web.js
legacy/re/: main.js
legacy/re86/: index.html
lib/: Makefile  buffers.c  buffers.w.d  highlight.min.js  libui.c  libui.w.d  parser.c  parser.h  parser.w.d  re.c  re.h  re.w.d  sci.h  unicorn.c  virt.dts  x.S
lib/arm64-ttbl/: .gitignore  Makefile  README.md  graveyard.c  index.html  main.c  ram.img
lib/assets/: app.res
lib/cpp/: Makefile  cppmain.c  preproc.c  preproc.h  tokenizer.c  tokenizer.h
lib/test/: comments.hex
re/: index.html  main.js  style.css  unicorn-arm.min.js
re64/: index.html  unicorn-aarch64.min.js
riscv/: examples.js  examples2.js  index.html  landing.html  web.js
wasm/: Makefile  hello.html  keystone.cpp  main.c  serve.py  shell.html
www/: 404.html  codejar.js  dark-theme.css  examples.js  index.html  landing.html  light-theme.css  portrait.css  ret.js  sitemap.xml  style.css  ui.js  web.js  x86asm.js
www/bitbash/: README.md  bitbash.js  examples.js  examples.py  index.html  style.css
www/bitbash/regs/: cptr_el2.reg  esr_el1.reg  hcr_el2.reg  mair_el1.reg  mpidr_el1.reg  scr_el3.reg  sctlr_el1.reg  sctlr_el2.reg  tcr_el1.reg
www/lib/: armasm.js
x86/: examples.js  index.html  landing.html  style.css  sublime.css  web.js
